--- a/css/style.css
+++ b/css/style.css
@@ -23,13 +23,181 @@ h2 {
   color: #000000;
 }
 
+.clearfix::after {
+  content: "";
+
+  display: table;
+  clear: both;
+}
+
 .container {
   width: 1200px;
   padding: 0 10px;
   margin: 0 auto;
+
 }
 
 .main-header{
   min-height: 55px;
   outline: 1px solid black;
+  margin-bottom: 75px;
+}
+
+.main-navigation {
+width: 1200px;
+}
+
+.index-logo {
+
+margin-left: auto;
+margin-right: auto;
+margin-bottom: 60px;
+}
+
+.promo {
+  width: 445px;
+margin-left: auto;
+margin-right: auto;
+margin-bottom: 35px;
+}
+
+.promo-item {
+  text-align: center;
+}
+
+.features-promo {
+text-align: center;
+margin-bottom: 55px;
+}
+
+.features-item-one {
+width: 150px;
+height: 155px;
+background-color: #81b3d2;
+color: #ffffff;
+text-align: center;
+padding: 50px 125px;
+float: left;
+}
+
+.features-image-one {
+margin-bottom: 55px;
+}
+
+
+
+.little-features-item {
+  float: left;
+  width: 350px;
+  margin-right: 75px;
+  ;
+  min-height: 190px;
+  text-align: center;
+}
+
+.little-features-item:last-child {
+  margin-right: 0;
+}
+
+.little-features {
+margin-bottom: 85px;
+}
+
+.features-image {
+  float: left;
+  width: 800px;
+  height: 255px;
+}
+
+
+.features-item-two {
+width: 150px;
+height: 155px;
+background-color: #81b3d2;
+text-align: center;
+color: #ffffff;
+padding: 50px 125px;
+float: left;
+margin-bottom: 50px;
+}
+
+
+
+
+
+.lil-features-item {
+  float: left;
+  width: 350px;
+  margin-right: 75px;
+  min-height: 155px;
+
+  text-align: center;
+  margin-bottom: 5px;
+}
+
+.lil-features-item:last-child {
+  margin-right: 0;
+}
+
+.booking-name {
+  text-align: center;
+}
+p {
+  text-align: center;
+}
+
+.booking-form-title {
+width: 570px;
+height: 86px;
+padding: 32px 140px;
+outline: 1px solid black;
+margin-top: 50px;
+margin-left: auto;
+margin-right: auto;
+box-sizing: border-box;
+text-align: center;
+background-color: #766357;
+color:#ffffff;
+}
+
+
+
+
+.booking-form {
+width: 570px;
+height: 396px;
+outline: 1px solid black;
+margin-left: auto;
+margin-right: auto;
+box-sizing: border-box;
+padding-top: 68px;
+padding-left: 56px;
+padding-right: 56px;
+padding-bottom: 56px;
+background-color: #ffffff;
+}
+
+.booking-btn-item {
+display: flex;
+justify-content: center;
+align-items: center;
+margin-top: 70px;
+width: 458px;
+height: 58px;
+outline: 1px solid black;
+background-color: #81b3d2;
+
+
+}
+
+.main-footer {
+min-height: 120px;
+
+}
+
+.map {
+  background-image: url("../img/map.jpg");
+  width: 1200px;
+  height: 472px;
+  background-position: center;
 }
